# Self-media-Viral-Assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: ai_providers.conf.in  api_keys.conf.in  database.conf.in
core/base/: plugin_interface.h  plugin_manager.cpp  plugin_manager.h
docs/en/: DEVELOPMENT.md  README.md
docs/zh/: DEVELOPMENT.md
include/ai/: agent_framework.h  ai_provider_base.h  content_analyzer.h  llm_manager.h  mcp_client.h  skill_registry.h
include/api/: JizhileProvider.h  api_fallback_chain.h  data_source_base.h  extreme_data_api.h  qingbo_api.h  wechat_official_api.h  wewe_rss_api.h  xigua_data_api.h  xinbang_api.h
include/core/: Types.h  application.h  config_manager.h  event_bus.h  plugin_manager.h  thread_pool.h
include/core/base/: plugin_interface.h
include/database/: database_connection.h  database_manager.h
include/database/models/: article_model.h  metrics_model.h  user_model.h
include/ui/: main_window.h  qml_bridge.h
include/utils/: crypto_utils.h  http_client.h  json_utils.h  logger.h  platform_utils.h
plugins/: CMakeLists.txt
plugins/ai_providers/: CMakeLists.txt  openai_provider.h  plugin.json
plugins/datasources/: CMakeLists.txt  jizhile_provider.cpp  jizhile_provider.h  plugin.json  xinbang_provider.cpp  xinbang_provider.h
resources/: resources.qrc
resources/qml/: main.qml
resources/qml/pages/: AnalysisPage.qml  ContentLibraryPage.qml  DashboardPage.qml  JizhileConfigPage.qml  SettingsPage.qml  SuggestionsPage.qml
src/: main.cpp
src/ai/: agent_framework.cpp  ai_provider_base.cpp  content_analyzer.cpp  llm_manager.cpp  mcp_client.cpp  skill_registry.cpp
src/api/: JizhileProvider.cpp  api_fallback_chain.cpp  data_source_base.cpp  extreme_data_api.cpp  qingbo_api.cpp  wechat_official_api.cpp  wewe_rss_api.cpp  xigua_data_api.cpp  xinbang_api.cpp
src/core/: application.cpp  config_manager.cpp  event_bus.cpp  plugin_manager.cpp  thread_pool.cpp
src/database/: database_connection.cpp  database_manager.cpp
src/database/models/: article_model.cpp  metrics_model.cpp  user_model.cpp
src/ui/: main_window.cpp  qml_bridge.cpp
src/utils/: crypto_utils.cpp  http_client.cpp  json_utils.cpp  logger.cpp  platform_utils.cpp
tests/: CMakeLists.txt
ui/qml/: main.qml
